[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://frame1.png" type="Texture" id=2]
[ext_resource path="res://frame2.png" type="Texture" id=3]
[ext_resource path="res://frame3.png" type="Texture" id=4]
[ext_resource path="res://frame4.png" type="Texture" id=5]
[ext_resource path="res://frame5.png" type="Texture" id=6]
[ext_resource path="res://frame6.png" type="Texture" id=7]
[ext_resource path="res://frame7.png" type="Texture" id=8]
[ext_resource path="res://frame8.png" type="Texture" id=9]
[ext_resource path="res://buttonTexture2.png" type="Texture" id=10]
[ext_resource path="res://betweenScreen.png" type="Texture" id=11]
[ext_resource path="res://Sounds/correct.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/wrong.wav" type="AudioStream" id=13]
[ext_resource path="res://frame9.png" type="Texture" id=14]
[ext_resource path="res://Sounds/keyboard.wav" type="AudioStream" id=15]

[sub_resource type="Theme" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 47.947, 0 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 466.726, 294.332 )
rotation = -1.68355
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="buttonBack" type="Button" parent="."]
margin_left = 294.875
margin_top = 561.169
margin_right = 306.875
margin_bottom = 581.169
rect_scale = Vector2( 2.42889, 1.36345 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 420.672, 269.397 )
scale = Vector2( 1, 0.982575 )
texture = ExtResource( 2 )

[node name="TouchScreenButton" type="Button" parent="Sprite"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -135.032
margin_top = 115.858
margin_right = -123.032
margin_bottom = 135.858
rect_scale = Vector2( 14.003, 2.07181 )

[node name="Control" type="Control" parent="."]
margin_left = -3.09094
margin_right = 36.9091
margin_bottom = 40.0
theme = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 426.665, 294.479 )
scale = Vector2( 1, 1.01773 )
texture = ExtResource( 3 )

[node name="Button2" type="Button" parent="Control/Sprite2"]
margin_left = -123.38
margin_top = 119.051
margin_right = -111.38
margin_bottom = 139.051
rect_scale = Vector2( 6.75131, 2.57713 )
flat = true

[node name="Sprite3" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 425.382, 295.299 )
scale = Vector2( 1.00209, 1.04063 )
texture = ExtResource( 4 )

[node name="HSlider" type="HSlider" parent="Control/Sprite3"]
margin_left = -135.158
margin_top = -61.7093
margin_right = 134.842
margin_bottom = -45.7093
rect_scale = Vector2( 0.91474, 1 )
max_value = 4.0
ticks_on_borders = true

[node name="Button3" type="Button" parent="Control/Sprite3"]
margin_left = 106.296
margin_top = 197.75
margin_right = 136.296
margin_bottom = 220.75
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ok"
flat = true

[node name="Sprite4" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 426.497, 282.359 )
scale = Vector2( 1.00546, 1 )
texture = ExtResource( 5 )

[node name="Button4" type="Button" parent="Control/Sprite4"]
margin_left = 94.1395
margin_top = 187.232
margin_right = 106.14
margin_bottom = 207.232
rect_scale = Vector2( 2.2454, 1.08783 )
flat = true

[node name="Sprite5" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 428.476, 281.15 )
scale = Vector2( 1.01351, 0.992602 )
texture = ExtResource( 6 )

[node name="Button5" type="Button" parent="Control/Sprite5"]
margin_left = 94.843
margin_top = 190.569
margin_right = 106.843
margin_bottom = 210.569
rect_scale = Vector2( 1.94153, 1.0813 )
flat = true

[node name="Sprite6" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 426.054, 281.552 )
texture = ExtResource( 7 )

[node name="Button6" type="Button" parent="Control/Sprite6"]
margin_left = 142.073
margin_top = 189.173
margin_right = 154.073
margin_bottom = 209.173
rect_scale = Vector2( -2.72284, 1.18957 )
flat = true

[node name="Sprite7" type="Sprite" parent="Control"]
editor/display_folded = true
visible = false
position = Vector2( 425.462, 284.481 )
scale = Vector2( 1.00573, 0.935345 )
texture = ExtResource( 8 )

[node name="Button7" type="Button" parent="Control/Sprite7"]
margin_left = 127.017
margin_top = 173.989
margin_right = 139.017
margin_bottom = 193.989
rect_scale = Vector2( -10.1181, 1.08923 )
flat = true

[node name="Sprite8" type="Sprite" parent="Control"]
visible = false
material = SubResource( 2 )
position = Vector2( 427.149, 279.465 )
texture = ExtResource( 9 )

[node name="Button8_1" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -136.394
margin_top = -142.921
margin_right = -3.39357
margin_bottom = -76.921
rect_scale = Vector2( 1.00574, 1.04827 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_2" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1.96877
margin_top = 6.60699
margin_right = 131.032
margin_bottom = 72.6071
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_3" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -137.629
margin_top = -68.7599
margin_right = -4.62872
margin_bottom = -2.75981
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_4" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -140.803
margin_top = 81.9739
margin_right = -7.80206
margin_bottom = 147.974
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_5" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -139.216
margin_top = 7.4003
margin_right = -6.21538
margin_bottom = 73.4004
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_6" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.76207
margin_top = -70.3466
margin_right = 130.238
margin_bottom = -4.3465
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_7" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -136.027
margin_top = 160.804
margin_right = -3.02661
margin_bottom = 226.804
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_8" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1.1754
margin_top = 161.307
margin_right = 131.825
margin_bottom = 227.308
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_9" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.76207
margin_top = -143.333
margin_right = 130.238
margin_bottom = -77.3334
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Button8_10" type="Button" parent="Control/Sprite8"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 0.41127
margin_top = 80.3872
margin_right = 133.412
margin_bottom = 146.387
rect_scale = Vector2( 1.04513, 1.09575 )
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="Sprite8b" type="Sprite" parent="Control"]
visible = false
position = Vector2( 426.532, 280.508 )
scale = Vector2( 1.9745, 1.84664 )
texture = ExtResource( 11 )

[node name="Label8b" type="Label" parent="Control/Sprite8b"]
margin_left = -70.073
margin_top = -54.1456
margin_right = 356.927
margin_bottom = -6.14558
rect_scale = Vector2( 0.627769, 0.689999 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Now that you know the basics....."
autowrap = true
percent_visible = 0.0

[node name="Label8b_2" type="Label" parent="Control/Sprite8b"]
margin_left = -73.2002
margin_top = -10.7115
margin_right = 353.8
margin_bottom = 37.2885
rect_scale = Vector2( 0.578454, 0.700491 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = " Time to explore the outside world!!
"
autowrap = true
percent_visible = 0.0

[node name="Timer8b" type="Timer" parent="Control/Sprite8b"]
wait_time = 0.08

[node name="Correct8" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -7.62939e-06, 0 )
stream = ExtResource( 12 )

[node name="Wrong8" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -30.0714, -2.86395 )
stream = ExtResource( 13 )

[node name="Sprite9" type="Sprite" parent="."]
visible = false
position = Vector2( 423.196, 283.547 )
scale = Vector2( 0.999094, 0.988974 )
texture = ExtResource( 14 )

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite10" type="Sprite" parent="."]
visible = false
position = Vector2( 421.248, 277.703 )
texture = ExtResource( 14 )

[node name="Timer8" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Keyboard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
[connection signal="pressed" from="buttonBack" to="." method="_on_buttonBack_pressed"]
[connection signal="pressed" from="Sprite/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Control/Sprite2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Sprite3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Sprite4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Sprite5/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Sprite6/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Control/Sprite7/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_1" to="." method="_on_Button8_1_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_2" to="." method="_on_Button8_2_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_3" to="." method="_on_Button8_3_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_4" to="." method="_on_Button8_4_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_5" to="." method="_on_Button8_5_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_6" to="." method="_on_Button8_6_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_7" to="." method="_on_Button8_7_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_8" to="." method="_on_Button8_8_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_9" to="." method="_on_Button8_9_pressed"]
[connection signal="pressed" from="Control/Sprite8/Button8_10" to="." method="_on_Button8_10_pressed"]
[connection signal="timeout" from="Control/Sprite8b/Timer8b" to="." method="_on_Timer8b_timeout"]
[connection signal="finished" from="Correct8" to="." method="_on_Correct8_finished"]
[connection signal="finished" from="Wrong8" to="." method="_on_Wrong8_finished"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
